tests/fail/missing_placeholder.stderr
error: unused type
 --> tests/fail/missing_placeholder.rs:2:44
  |
2 |     sscanf::sscanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unused type
 --> tests/fail/missing_placeholder.rs:2:80
  |
2 |     sscanf::sscanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
  |                                                                                ^^^

error: unused type
 --> tests/fail/missing_placeholder.rs:3:56
  |
3 |     sscanf::sscanf!("hi", "asdf{u32}{}{usize}", usize, u32);
  |                                                        ^^^
